--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
       - master
-      #- gh-pages
+      - gh-pages
     paths-ignore:
       - .gitignore
       - README.md
